# telegram_anki_bot

./: .gitignore  README.md  anki_api.py  main.py  pyproject.toml  settings.py
anki_bridge/: __init__.py  anki_api.py
